--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -83,7 +83,7 @@
                         tools:layout_editor_absoluteY="188dp">
 
                         <LinearLayout
-                            android:id="@+id/principal"
+                            android:id="@+id/main"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"></LinearLayout>
