--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -2,10 +2,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="600dp"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    android:padding="4dp"
+    android:padding="32dp"
     tools:context=".AddGridActivity">
 
 
@@ -13,7 +13,6 @@
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +20,7 @@
 
         <ImageView
             android:id="@+id/iv_color"
-            android:layout_width="30dp"
+            android:layout_width="5dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
@@ -69,32 +68,32 @@
             tools:layout_editor_absoluteX="586dp"
             tools:layout_editor_absoluteY="50dp" />
 
-        <Button
+        <ImageView
             android:id="@+id/btn_add"
-            android:layout_width="110dp"
+            android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_weight="1"
-            android:background="@drawable/style_button_white"
-            android:text="@string/add"
-            tools:layout_editor_absoluteX="717dp"
-            tools:layout_editor_absoluteY="50dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/linearLayout"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/icons8_coche_96_1" />
+
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
 
         android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:scrollbars="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        tools:listitem="@layout/item_tag" />
 
     <Button
         android:id="@+id/btn_end"
