--- a/app/src/main/res/layout-land/activity_connexion.xml
+++ b/app/src/main/res/layout-land/activity_connexion.xml
@@ -33,7 +33,7 @@
                 app:srcCompat="@drawable/vyfe_blanc" />
 
             <LinearLayout
-                android:id="@+id/linearLayout"
+                android:id="@+id/linear_layout_add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -138,7 +138,7 @@
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+                app:layout_constraintTop_toBottomOf="@+id/linear_layout_add" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
