--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/scrollView2"
+            app:layout_constraintEnd_toStartOf="@+id/scroll_view_left"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -97,7 +97,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/video_view">
 
                     <HorizontalScrollView
-                        android:id="@+id/horizontalScrollView"
+                        android:id="@+id/horizontal_scroll_view"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scrollbars="horizontal">
@@ -119,7 +119,7 @@
 
 
         <ScrollView
-            android:id="@+id/scrollView2"
+            android:id="@+id/scroll_view_left"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginEnd="8dp"
