--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -9,7 +9,7 @@
     tools:context=".AddGridDialog">
 
     <ScrollView
-        android:id="@+id/scrollView3"
+        android:id="@+id/scroll_view_all"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="32dp"
@@ -20,14 +20,14 @@
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:id="@+id/linearLayout"
+                android:id="@+id/linear_layout_add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/scrollView3">
+                app:layout_constraintTop_toTopOf="@+id/scroll_view_all">
 
                 <ImageView
                     android:id="@+id/iv_color"
@@ -74,7 +74,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_weight="1"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/linearLayout"
+                    app:layout_constraintStart_toEndOf="@+id/linear_layout_add"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/icons8_coche_96_1" />
 
@@ -87,8 +87,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:scrollbars="vertical"
-                app:layout_constraintStart_toStartOf="@+id/linearLayout"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+                app:layout_constraintStart_toStartOf="@+id/linear_layout_add"
+                app:layout_constraintTop_toBottomOf="@+id/linear_layout_add"
                 tools:listitem="@layout/item_tag" />
 
             <Button
